2008-09-06  Antti Koivisto  <antti@apple.com>

        Reviewed by Dan Bernstein.

        Fix <rdar://problem/6201644>
        https://bugs.webkit.org/show_bug.cgi?id=20493
        Crash after OK in dialog box and reloading page in secure mode
        
        Limited loader only fix since the general timer fix is causing problems on Windows.

        * loader/loader.cpp:
        (WebCore::Loader::servePendingRequests):
        (WebCore::Loader::Host::Host):
        (WebCore::Loader::Host::didFinishLoading):
        (WebCore::Loader::Host::didFail):
        (WebCore::Loader::Host::didReceiveData):
        * loader/loader.h:
        (WebCore::Loader::Host::processingResource):

2008-09-06  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        The initial Core Text adoption prototype was made by Daniel Fenwick.

        - <rdar://problem/5158514> Add a Core Text-based complex text code path

        Currently the Core Text code path is not used in any configuration.

        * WebCore.xcodeproj/project.pbxproj: Added files.
        * config.h: Defined WTF_USE_ATSUI and WTF_USE_CORE_TEXT.
        * platform/graphics/Font.cpp:
        (WebCore::WidthIterator::advance): Moved the spacingDisabled() test out
        of the loop.
        * platform/graphics/GlyphBuffer.h:
        (WebCore::GlyphBuffer::add): Added this version that takes an advance.
        * platform/graphics/SimpleFontData.h: Added ATSUI and CORE_TEXT #ifdefs.
        Added getCTFont() and getCFStringAttributes() and corresponding data
        members for Core Text.
        * platform/graphics/mac/CoreTextController.cpp: Added.
        (WebCore::roundCGFloat): Helper function.
        (WebCore::ceilCGFloat): Helper function.
        (WebCore::CoreTextController::CoreTextRun::CoreTextRun):
        (WebCore::CoreTextController::CoreTextController):
        (WebCore::CoreTextController::offsetForPosition):
        (WebCore::CoreTextController::collectCoreTextRuns): Added. Segments the