@@ -56,7 +56,6 @@ public:
     ~PageGroupLoadDeferrer();
 private:
     Vector<RefPtr<Frame>, 16> m_deferredFrames;
-    bool m_wasDeferringTimers;
 #if !PLATFORM(MAC)
     Vector<pair<RefPtr<Frame>, PausedTimeouts*>, 16> m_pausedTimeouts;
 #endif
@@ -412,11 +411,7 @@ bool ChromeClient::paintCustomScrollCorner(GraphicsContext*, const FloatRect&)
 // --------
 
 PageGroupLoadDeferrer::PageGroupLoadDeferrer(Page* page, bool deferSelf)
-    : m_wasDeferringTimers(isDeferringTimers())
 {
-    if (!m_wasDeferringTimers)
-        setDeferringTimers(true);
-    
     const HashSet<Page*>& pages = page->group().pages();
 
     HashSet<Page*>::const_iterator end = pages.end();
@@ -445,9 +440,6 @@ PageGroupLoadDeferrer::PageGroupLoadDeferrer(Page* page, bool deferSelf)
 
 PageGroupLoadDeferrer::~PageGroupLoadDeferrer()
 {
-    if (!m_wasDeferringTimers)
-        setDeferringTimers(false);
-
     for (size_t i = 0; i < m_deferredFrames.size(); ++i)
         if (Page* page = m_deferredFrames[i]->page())
             page->setDefersLoading(false);
