@@ -1,5 +1,14 @@
 2008-09-06  Antti Koivisto  <antti@apple.com>
 
+        Reverting r35953 which was causing problems on Windows which relies on
+        WebCore timers in nested event loops. r36132 did alternative fix.
+
+        * page/Chrome.cpp:
+        (WebCore::PageGroupLoadDeferrer::PageGroupLoadDeferrer):
+        (WebCore::PageGroupLoadDeferrer::~PageGroupLoadDeferrer):
+
+2008-09-06  Antti Koivisto  <antti@apple.com>
+
         Reviewed by Dan Bernstein.
 
         Fix <rdar://problem/6201644>
